--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -2,17 +2,7 @@
   <app-header></app-header>
 </header>
 <section id="hero" aria-label="Introduction Section" data-section="hero">
-  <h1 class="header">I'm <span class="name">Vimal</span>, <br /> Frontend Developer</h1>
-  <div class="contentContainer">
-    <p class="reviewText">Vimal's Exceptional product design ensure our website's success. Highly Recommended.</p>
-    <div class="profileImgContainer">
-      <img class="profileImg" src="../assets/vimal_photo.webp" width="300" alt="profile_image" />
-    </div>
-    <div class="yearsExperience">
-      <p class="years">2.5 Years</p>
-      <p class="experience">Experience</p>
-    </div>
-  </div>
+  <app-hero></app-hero>
 </section>
 <section id="about" aria-label="About Me Section" data-section="about">
       <p class="yearsExperience">2.5 Years <br /> <span class="experience">Experience</span></p>
