005 - Completed animation for hero page and created a compoent for projects section

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -4,14 +4,13 @@
 <section id="hero" aria-label="Introduction Section" data-section="hero">
   <app-hero></app-hero>
 </section>
+<section id="projects" aria-label="Projects Section" data-section="projects">
+  <app-projects></app-projects>
+</section>
 <section id="about" aria-label="About Me Section" data-section="about">
-      <p class="yearsExperience">2.5 Years <br /> <span class="experience">Experience</span></p>
       <!-- About content -->
 </section>
 
-<section id="projects" aria-label="Projects Section" data-section="projects">
-  <!-- Projects content -->
-</section>
 
 <section id="contact" aria-label="Contact Section" data-section="contact">
   <!-- Contact form or details -->
