--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -2,11 +2,12 @@
 
 .projectsContainer {
     width: 100%;
-    height: 500px;
+    height: 650px;
     background-image: url("../../../assets/projects_background.webp");
     background-position: center;
     background-size: cover;
-    border-radius: 60px 60px 0 0
+    border-radius: 60px 60px 0 0;
+    margin-bottom: 30px;
 }
 
 .headerContainer {
@@ -32,4 +33,65 @@
     flex: 1 1 40%;
     color: white;
     padding-right: 50px;
+}
+
+.projectContentContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    padding: 0 30px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.projectContentSvg {
+    position: relative;
+    aspect-ratio: 5 / 6;
+    // background-image: url("../../../assets/projects_box.svg");
+    background: linear-gradient(to bottom, green 50% , transparent 50% );
+    border-radius: 30px;
+    // background-position: center;
+    // background-size: contain;
+    // background-repeat: no-repeat;
+    max-width: 500px;
+    height: 400px;
+}
+
+.projectContentSvg:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 110px;
+    height: 110px;
+    background-color: yellow;
+}
+
+.navArrow {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    border-radius: 50%;
+}
+
+.horizontalRect {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    background-color: grey;
+    bottom: 110px;
+    border-radius: 0 0 50px 0;
+}
+
+.verticalRect {
+    position: absolute;
+    width: calc(100% - 110px);
+    height: 260px;
+    background-color: grey;
+    right: 110px;
+    bottom: 0;
+    border-radius: 0 0 50px 0;
 }
