--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -7,6 +7,7 @@
         <div class="projectContentSvg" *ngFor="let project of projects">
             <!-- <img [src]="'../../../assets/' + project + '.jpg'" width="100%" height="90%" /> -->
              <div class="horizontalRect"></div>
+             <div class="horizontalRectBorder"></div>
              <div class="verticalRect"></div>
              <div class="navArrow"></div>
         </div>
