--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -6,6 +6,7 @@
     background-image: url("../../../assets/projects_background.webp");
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
     border-radius: 60px 60px 0 0;
     margin-bottom: 30px;
 }
@@ -64,7 +65,7 @@
     right: 0;
     width: 110px;
     height: 110px;
-    background-color: yellow;
+    // background-color: yellow;
 }
 
 .navArrow {
@@ -86,6 +87,22 @@
     border-radius: 0 0 50px 0;
 }
 
+.horizontalRectBorder {
+    position: absolute;
+    width: 76%;
+    height: 180px;
+    background-color: grey;
+    z-index: 10;
+    bottom: 80px;
+    /* ✨ MASK TO REMOVE BOTTOM-RIGHT CORNER */
+    -webkit-mask-image: 
+      radial-gradient(circle at bottom right, transparent 30px, black 30px);
+    mask-image: 
+      radial-gradient(circle at bottom right, transparent 30px, black 30px);
+    -webkit-mask-composite: destination-out; /* For Chrome */
+    mask-composite: exclude;                 /* For Firefox */
+}
+
 .verticalRect {
     position: absolute;
     width: calc(100% - 110px);
@@ -94,4 +111,10 @@
     right: 110px;
     bottom: 0;
     border-radius: 0 0 50px 0;
+}
+
+.horizontalRect, .horizontalRectBorder, .verticalRect {
+    background-image: url("../../../assets/oands_page.jpg");
+    background-size: cover;
+    background-position: 0 0;
 }
