--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -5,11 +5,21 @@
     </div>
     <div class="projectContentContainer">
         <div class="projectContentSvg" *ngFor="let project of projects">
+            <div class="projectDetailsContainer">
+                <h3>{{project.title}}</h3>
+            </div>
             <!-- <img [src]="'../../../assets/' + project + '.jpg'" width="100%" height="90%" /> -->
-             <div class="horizontalRect"></div>
-             <div class="horizontalRectBorder"></div>
-             <div class="verticalRect"></div>
-             <div class="navArrow"></div>
+             <div [style.backgroundImage]="'url(' + project.img + ')'" class="horizontalRect"></div>
+             <div [style.backgroundImage]="'url(' + project.img + ')'" class="horizontalRectBorder"></div>
+             <div [style.backgroundImage]="'url(' + project.img + ')'" class="verticalRect"></div>
+             <div class="navArrow">
+                <span class="material-symbols-outlined navIcon">
+                    arrow_outward
+                </span>
+             </div>
         </div>
+    </div>
+    <div class="sliderContainer">
+        <div *ngFor="let slider of projects, let i = index" class="inactive"></div>
     </div>
 </div>
