011 - Added arrow animation and created skills component

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -7,6 +7,9 @@
 <section id="projects" aria-label="Projects Section" data-section="projects">
   <app-projects></app-projects>
 </section>
+<section id="skills" aria-label="Skills Section" data-section="skills">
+  <app-skills></app-skills>
+</section>
 <section id="about" aria-label="About Me Section" data-section="about">
       <!-- About content -->
 </section>
