--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,4 +1,7 @@
 <div class="projectsContainer">
+    <div class="background leftStar"></div>
+    <div class="background centerStar"></div>
+    <div class="background rightStar"></div>
     <div class="headerContainer">
         <h2>My <span>Projects</span></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacus nunc, posuere in justo vulputate, bibendm sodales </p>
@@ -9,19 +12,23 @@
                 <div class="projectDetailsContainer">
                     <h3>{{project.title}}</h3>
                 </div>
-                <!-- <img [src]="'../../../assets/' + project + '.jpg'" width="100%" height="90%" /> -->
-                 <div [style.backgroundImage]="'url(' + project.img + ')'" class="horizontalRect"></div>
-                 <div [style.backgroundImage]="'url(' + project.img + ')'" class="horizontalRectBorder"></div>
-                 <div [style.backgroundImage]="'url(' + project.img + ')'" class="verticalRect"></div>
-                 <div class="navArrow">
-                    <span class="material-symbols-outlined navIcon">
-                        arrow_outward
-                    </span>
-                 </div>
+                <div>
+
+                    <div [style.backgroundImage]="'url(' + project.img + ')'" class="horizontalRect"></div>
+                    <div [style.backgroundImage]="'url(' + project.img + ')'" class="horizontalRectBorder"></div>
+                    <div [style.backgroundImage]="'url(' + project.img + ')'" class="verticalRect"></div>
+                </div>
+                 <a [href]="project.link" target="_blank">
+                    <div class="navArrow">
+                        <span class="material-symbols-outlined navIcon">
+                            arrow_outward
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
-    <div class="sliderContainer">
+    <div class="dotContainer">
         <div *ngFor="let dots of dotsArray, let i = index" [class.active]="i === activeDotIndex" class="dot" (click)="onDotClick(i)"></div>
     </div>
 </div>
