--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -1,8 +1,9 @@
 @import '../../../variables';
 
 .projectsContainer {
+    position: relative;
     width: 100%;
-    height: 650px;
+    // height: 650px;
     background-image: url("../../../assets/projects_background.webp");
     background-position: center;
     background-size: cover;
@@ -45,6 +46,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    transition: background-color .15s ease-in;
 }
 
 .slider {
@@ -63,7 +65,6 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 30px;
     transition: left .3s ease-in;
 }
 
@@ -113,12 +114,22 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: background-color .15s ease-in;
+    overflow: hidden;
 }
 
 .navArrow .navIcon {
     font-size: 40px;
     color: white;
+    transform: translate(0%, 0%);
+    transition: transform .3s ease-in-out;
+    // animation: arrowReset 1s ease-in-out forwards;
+    // transition: transform .3s ease-in infinite;
 }
+
+// .navIcon:not(:hover) {
+//     animation: arrowReset 0.5s ease-out forwards;
+//   }
 
 .horizontalRect {
     position: absolute;
@@ -173,12 +184,13 @@
     overflow: hidden;
 }
 
-.sliderContainer {
+.dotContainer {
     display: flex;
     flex-direction: row;
     gap: 20px;
     justify-content: center;
     align-items: center;
+    margin: 30px 0;
 }
 
 .dot {
@@ -234,4 +246,112 @@
 .dot.active {
     width: 30px;
     background-color: $primary-color;
+}
+
+.background {
+    position: absolute;
+    background-size: contain;
+    background-position: center;
+}
+
+.background {
+    transition: transform 3s cubic-bezier(0.5, -0.42, 0, 1.58);
+
+    &.leftStar {
+        top: 15%;
+        left: -115px;
+        width: 350px;
+        height: 350px;
+        background-image: url("../../../assets/projects_left_background_star.png");
+        transform-origin: 0 50%;
+    }
+    &.centerStar {
+        top: 10%;
+        left: 40%;
+        width: 150px;
+        height: 150px;
+        background-image: url("../../../assets/projects_center_background_star.png");
+        transform-origin: 50%;
+    }
+    &.rightStar {
+        top: 30%;
+        right: -150px;
+        width: 400px;
+        height: 400px;
+        background-image: url("../../../assets/projects_right_background_star.png");
+        transform-origin: 100% 50%;
+    }
+}
+
+.projectsContainer:hover {
+    .background {
+        transition: transform 3s cubic-bezier(0.5, -0.42, 0, 1.58);
+
+        &.leftStar {
+            transform: translateY(10%) rotate(20deg);
+        }
+
+        &.centerStar {
+            transform: translateX(100%) rotate(45deg);
+        }
+
+        &.rightStar {
+            transform: translateY(-5%) rotate(20deg);
+        }
+    }
+}
+
+.projectContentSvg:hover {
+    .projectDetailsContainer{
+        background-color: $primary-color;
+        transition: background-color .15s ease-in;
+    }
+
+    .navArrow {
+        background-color: $primary-color;
+        transition: background-color .15s ease-in;
+    }
+
+    .navIcon {
+        animation: arrowFloating 2s cubic-bezier(0.53,-0.33, 0.32, 1.26) infinite forwards;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .headerContainer {
+        h2 {
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 12px;
+        }
+    }
+}
+
+@keyframes arrowFloating {
+    0% {
+        transform: translate(0%, 0%);
+    }
+    40% {
+        transform: translate(100%, -100%);
+    }
+    41% {
+        color: $primary-color;
+        transform: translate(-100%, 100%);
+    }
+    42% {
+        color: white;
+    }
+    60% {
+        transform: translate(0%, 0%);
+    }
+    100% {
+        transform: translate(0%, 0%);
+    }
+}
+
+@keyframes arrowReset {
+    from { transform: inherit; }
+    to   { transform: translate(0%, 0%); color: white; }
 }
