--- a/portfolio/src/app/components/skills/skills.component.scss
+++ b/portfolio/src/app/components/skills/skills.component.scss
@@ -1,8 +1,80 @@
-#skillsbackground {
-    background-image: url("../../../assets/skills_background.jpg");
-    width: 100%;
-    height: 400px;
+@import '../../../variables';
+
+#skillsHeader {
+    color: black;
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+#skillsHeader::after {
+    content: "";
+    position: absolute;
+    background-image: url("../../../assets/Vector\ 1.png");
+    width: 25px;
+    height: 25px;
+    transform: translate(100%, -15px);
+    background-position: center;
     background-size: contain;
+}
+
+#skillsBackground {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    column-gap: 80px;
+    row-gap: 50px;
+    padding: 50px 200px 100px;
+}
+
+#skillsBackground::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../../assets/skills_background.jpg");
+    opacity: 0.15;
+    // width: 100%;
+    // height: 400px;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.skillContainer {
+    width: 80px;
+    height: 80px;
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 30px;
+    padding: 20px;
+    transition: background-color .3s ease-in-out, box-shadow .5s ease-in-out;
+}
+
+.skillContainer > img {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+    object-position: center;
+    transform: scale(1);
+    transition: transform .2s ease-in-out;
+}
+
+.skillContainer:hover {    
+    background-color: rgba(0, 0, 0, 0.05);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 20px;
+    transition: background-color .3s ease-in-out, box-shadow .5s ease-in-out;
+    
+    img {
+        transform: scale(1.05);
+        transition: transform .3s ease-in-out;
+    }
 }
