--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+$primary-color: #FD853A;
 
 html, body {
     margin: 0;
