--- a/portfolio/src/app/components/footer/footer.component.html
+++ b/portfolio/src/app/components/footer/footer.component.html
@@ -31,13 +31,15 @@
     <div class="footerContactContainer">
         <h5>Contact</h5>
         <p>+91 7708384143</p>
-        <p>+francisvimal2002@gmail.com</p>
+        <p class="email">francisvimal2002@gmail.com</p>
         <p>francis-vimal</p>
     </div>
     <div class="footerFormContainer">
         <h5>Get the latest information</h5>
-        <input type="text" placeholder="Email Address" />
-        <span class="material-symbols-outlined">send</span>
+        <div class="emailFieldContainer">
+          <input class="emailField" type="text" placeholder="Email Address" />
+          <span class="material-symbols-outlined sendIcon">send</span>
+        </div>
     </div>
   </div>
 </div>
