--- a/portfolio/src/app/components/footer/footer.component.scss
+++ b/portfolio/src/app/components/footer/footer.component.scss
@@ -92,10 +92,34 @@ h5 {
 
 .footerContactContainer {
     flex: 1 1 20%;
+
+    .email {
+        word-break: break-word
+    }
 }
 
 .footerFormContainer {
     flex: 1 1 20%;
+}
+
+.emailFieldContainer {
+    display: flex;
+    align-items: center;
+}
+
+.emailField {
+    width: 100%;
+    border: 0;
+    padding: 12px 10px;
+    border-radius: 10px 0 0 10px;
+}
+
+.sendIcon {
+    color: white;
+    font-size: 1.5em;
+    padding: 8px;
+    background-color: $primary-color;
+    border-radius: 0 10px 10px 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -110,5 +134,34 @@ h5 {
 
     h5 {
         margin-bottom: 15px;
+    }
+
+    .footerTopContainer {
+        margin: 30px 0 60px;
+    }
+
+    .footerTopContainer > h2 {
+        font-size: 2.5em;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #footerContainer {
+        padding: 20px 40px;
+    }
+
+    .footerTopContainer {
+        margin: 20px 0 40px;
+    }
+
+    .footerTopContainer > h2 {
+        font-size: 1.5em;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .footerTopContainer {
+        flex-direction: column;
+        gap: 15px;
     }
 }
