015- Header component tab responsive changes

--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <li (mouseenter)="moveIndicator($event)"><a href="#">Home</a></li>
         <li (mouseenter)="moveIndicator($event)"><a href="#">About</a></li>
         <li (mouseenter)="moveIndicator($event)"><a href="#">Service</a></li>
-        <li (mouseenter)="moveIndicator($event)">
+        <li (mouseenter)="moveIndicator($event)" class="githubContainer">
             <a href="https://github.com/francis-vimal" target="_blank" aria-label="GitHub">
                 <img class="githubImg" src="../../../assets/github-logo.png" width="50" height="50" />
             </a>
