--- a/portfolio/src/app/components/header/header.component.scss
+++ b/portfolio/src/app/components/header/header.component.scss
@@ -47,6 +47,12 @@ a {
     transition: all 1s cubic-bezier(0.33, -0.32, 0.5, 1.23);;
 }
 
+.githubContainer, .githubContainer a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (max-width: 600px) {
     .headerContainer {
         padding: 10px 20px;
